[project]
name = "fermentation-station"
version = "0.1.0"
description = "Fermentation station agent"
authors = [
    {name = "Lukas"}
]
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "pytest (>=8.3.4,<9.0.0)",
    "pydantic (>=2.10.5,<3.0.0)",
    "black (>=24.10.0,<25.0.0)",
    "isort (>=5.13.2,<6.0.0)",
    "mypy (>=1.14.1,<2.0.0)",
    "pytest-cov (>=6.0.0,<7.0.0)",
    "flake8 (>=7.1.1,<8.0.0)",
    "fastapi (>=0.115.8,<0.116.0)"
]

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
fermentation-station = "fermentation_station.main:main"